Additions to the documentation
Added documentation for HumanoidController.cs
1. ChangeHorizontalVelocity
2. TryJumping

--- a/2D Controller/Documentation.html
+++ b/2D Controller/Documentation.html
@@ -6,13 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controller Documentation</title>
 
-    <link rel="stylesheet" href="/CSS/scroll-bar.css">
-    <link rel="stylesheet" href="/CSS/general.css">
-    <link rel="stylesheet" href="/CSS/navigation-bar.css">
+    <link rel="stylesheet" href="CSS/scroll-bar.css">
+    <link rel="stylesheet" href="CSS/general.css">
+    <link rel="stylesheet" href="CSS/navigation-bar.css">
 </head>
 <body>
-    <script src="/JAVASCRIPT/header.js"></script>
-    
+    <header class="nav-bar">
+        <div class="navbar-links">
+            <ul>
+                <li id="active-nav-link"><a href="Documentation.html">Overview</a></li>
+                <li><a href="HTML/getting-started.html">Getting Started</a></li>
+                <li><a href="HTML/locomotion-controller.html">Locomotion Controller</a></li>
+                <li><a href="HTML/combat-system.html">Combat System</a></li>
+                <li><a href="HTML/CLASSES/classes.html">Classes</a></li>
+            </ul>
+        </div>
+    </header>
+
     <div class="main-page-division">
         <h3>Welcome to '2D Complete Character Controller,' a powerful Unity asset that simplifies the integration of advanced character mechanics and combat
         systems into your projects. This asset is crafted to streamline the development of dynamic and responsive characters, whether under player or AI control.</h3>
