Humanoid Controller -Public Methods documentation content

--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/change-horizontal-velocity.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/change-horizontal-velocity.html
@@ -16,9 +16,9 @@
         <div class="navbar-links">
             <ul>
                 <li><a href="../../../../Documentation.html">Overview</a></li>
-                <li><a href="../../../HTML/getting-started.html">Getting Started</a></li>
-                <li><a href="../../../HTML/locomotion-controller.html">Locomotion Controller</a></li>
-                <li><a href="../../../HTML/combat-system.html">Combat System</a></li>
+                <li><a href="../../../getting-started.html">Getting Started</a></li>
+                <li><a href="../../../locomotion-controller.html">Locomotion Controller</a></li>
+                <li><a href="../../../combat-system.html">Combat System</a></li>
                 <li id="active-nav-link"><a href="../../classes.html">Classes</a></li>
             </ul>
         </div>
@@ -28,7 +28,7 @@
         <p>
             <h1>ChangeHorizontalVelocity</h1>
             <h2>Declaration</h2>
-            <p>protected void <b>ChangeHorizontalVelocity</b>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector2.html" target="_blank">Vector2</a> <b>moveDirection</b>);</p>
+            <p>protected void <b>ChangeHorizontalVelocity</b>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector2.html">Vector2</a> <b>moveDirection</b>);</p>
             <br>
             <div class="table-division">
                 <span class="table-title">Parameters</span>
@@ -44,22 +44,25 @@
             <ul>
                 <li>This function manages the horizontal movement of the character, taking into account various factors such as the character's grounded or airborne state.</li> <br>
                 <li>It automatically limits the character's movement if another action, such as 'dash,' is being performed.</li> <br>
-                <li>Additionally, it sets the running state of the character by setting the value of the 'IsRunning' property accordingly</li> <br>
+                <li>Additionally, it sets the running state of the character by setting the value of the '<b>IsRunning</b>' property accordingly</li> <br>
                 <li>If a combat system is in place, it considers attack configurations and may restrict the character's movement accordingly.</li> <br>
             </ul>
         </p>
         <p>
-
-            This example implements the function to facilitate character movement. It's important to highlight that inheriting from the Humanoid controller is crucial for the proper functioning of this feature.
+            This example implements the function to facilitate character movement. It's important to highlight that inheriting from the Humanoid controller is crucial for the proper
+            functioning of this feature.
         </p>
         <div class="code-block">
             using UnityEngine; <br> <br>
-            public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a> &lbrace; <br> <br>
-            <span style="margin-left: 25px">protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html" target="_blank">Update</a>() &lbrace;</span> <br>
+            public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a> <br>
+            &lbrace; <br>
+            <span style="margin-left: 25px">protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()</span> <br>
+            <span style="margin-left: 25px;">&lbrace;</span> <br>
             <span style="margin-left: 50px;">base.Update();</span> <br> <br>
-            <span style="margin-left: 50px;"><a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector2.html" target="_blank">Vector2</a> moveDirection = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetAxis.html" target="_blank">Input.GetAxis</a>("Horizontal");</span> <br>
+            <span style="margin-left: 50px;"><a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector2.html">Vector2</a> moveDirection = <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Input.GetAxis.html">Input.GetAxis</a>("Horizontal");</span> <br>
             <span style="margin-left: 50px;">ChangeHorizontalVelocity(moveDirection);</span> <br>
             <span style="margin-left: 25px">&rbrace;</span>
+            <span><br>&rbrace;</span>
         </div>
     </div>
 </body>
