--- a/2D Controller/HTML/combat-system.html
+++ b/2D Controller/HTML/combat-system.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controller Documentation</title>
+    <title>Combat System</title>
 
-    <link rel="stylesheet" href="/CSS/navigation-bar.css">
+    <link rel="stylesheet" href="../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../CSS/general.css">
+    <link rel="stylesheet" href="../CSS/navigation-bar.css">
 </head>
 <body>
-    <script src="/JAVASCRIPT/header.js"></script>
-    <div>
-        This is the Combat System page.
-    </div>    
+    <header class="nav-bar">
+        <div class="navbar-links">
+            <ul>
+                <li><a href="../Documentation.html">Overview</a></li>
+                <li><a href="getting-started.html">Getting Started</a></li>
+                <li><a href="locomotion-controller.html">Locomotion Controller</a></li>
+                <li id="active-nav-link"><a href="combat-system.html">Combat System</a></li>
+                <li><a href="CLASSES/classes.html">Classes</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <div class="main-page-division">
+        <h1>This is the combat system page</h1>
+    </div>
 </body>
-</html>
