--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
@@ -35,8 +35,7 @@
             The HumanoidController class serves as an abstract base class for implementing a
             2D character controller. It provides a comprehensive set of functionalities for handling:
             <ul>
-                <li>Ground Movement</li>
-                <li>Aerial Movement</li>
+                <li>Ground/Aerial Movement</li>
                 <li>Jumping</li>
                 <li>Dashing</li>
                 <li>Ledge Grabbing</li>
